[package]
name = "fastset"
version = "0.3.0"
edition = "2021"
authors = ["Ayan Das <ayand@iisc.ac.in>"]
license = "MIT"
description = "Fast set implementation for dense, bounded integer collections, optimized for quick updates and access."
repository = "https://github.com/b-vitamins/fastset"
documentation = "https://docs.rs/fastset"
readme = "README.md"
keywords = ["set", "dense", "bounded", "integer", "performance"]
categories = ["data-structures", "algorithms", "no-std"]
homepage = "https://github.com/b-vitamins/fastset"

[dependencies]
nanorand = "0.7.0"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"
hashbrown = "0.14.3"

[features]
default = []

[[bench]]
name = "set"
path = "bench/set.rs"
harness = false
